@@ -11,8 +11,7 @@ require_once("lib/http.php");
 function handle_event($location, $baseLink=false, $needHeader=false)
 {
 	if ($baseLink === false){
-		global $PHP_SELF;
-		$baseLink = substr($PHP_SELF,strrpos($PHP_SELF,"/")+1)."?";
+		$baseLink = substr($_SERVER['PHP_SELF'],strrpos($_SERVER['PHP_SELF'],"/")+1)."?";
 	}else{
 		//debug("Base link was specified as $baseLink");
 		//debug(debug_backtrace());
