@@ -27,15 +27,14 @@ function show_backtrace(){
 		</style>";
 	}
 	$return .= "<div class='stacktrace'><b>Call Stack:</b><br>";
-	reset($bt);
 	$x=0;
-	while(list($key,$val)=each($bt)){
+	foreach ($bt as $key=>$val) {
 		if ($x > 0 && $val['function'] != 'logd_error_handler'){
 			$return .= "<b>$x:</b> <span class='function'>{$val['function']}(";
 			$y=0;
 			if ($val['args'] && is_array($val['args'])) {
 				reset($val['args']);
-				while (list($k,$v) = each($val['args'])){
+				foreach ($val['args'] as $k=>$v) {
 					if ($y > 0) $return.=", ";
 					$return.=backtrace_getType($v);
 					$y++;
@@ -76,7 +75,7 @@ function backtrace_getType($in){
 			$return.="<span class='array'>Array(<blockquote>";
 			reset($in);
 			$x=0;
-			while (list($key,$val)=each($in)){
+			foreach ($in as $key=>$val) {
 				if ($x>0) $return.=", ";
 				$return.=backtrace_getType($key)."=>".backtrace_getType($val);
 				$x++;
