@@ -35,7 +35,6 @@ if (injectmodule(httpget('module'), (httpget('admin')?true:false))){
 	if (($endtime - $starttime >= 1.00 && ($session['user']['superuser'] & SU_DEBUG_OUTPUT))){
 		//On a side note, you won't ever see this text. A normal module calls page_footer(), which ends execution here....
 		debug("Slow Module (".round($endtime-$starttime,2)."s): $mostrecentmodule`n");
-		system("echo '".date("Y-m-d H:i:s").": Slow Module $mostrecentmodule took ".round($endtime-$starttime,5)." secs >> /var/log/naruto/slowmodules.log ",$ak);
 	}
 	tlschema();
 }else{
